add interface enable/disable, fix snatroaming, not test yet
